# tree-sitter-jj_template

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-jj_template.h  tree-sitter-jj_template.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jj_template/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJjTemplateTests/: TreeSitterJjTemplateTests.swift
plugin/: jj_template.lua
queries/jj_template/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
