[package]
name = "tree-sitter-jj-template"
description = "Parser for the JJ Templating language"
version = "0.1.0"
authors = ["reo101 <pavel.atanasov2001@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "jj-template"]
categories = ["parsing", "text-editors"]
repository = "https://www.github.com/reo101/tree-sitter-jj_template"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
